# rust-code-editor

./: .clippy.toml  .gitignore  Cargo.toml  README.md
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
src/: app.rs  file_icons.rs  fs_tree.rs  main.rs  theme.rs
src/state/: cursor.rs  editor_state.rs  mod.rs
src/widgets/: activity_bar.rs  line_numbers.rs  minimap.rs  mod.rs  status_bar.rs  tab_bar.rs
